--- a/report.tex
+++ b/report.tex
@@ -16,11 +16,11 @@ For this project I conducted experiments analyzing the behavior of different cla
 
 \section{Experiments (Part 1)}
 
-\subsection{Results}
+\subsection{Cross-validation by method}
 
-\subsubsection{Cross-validation by method}
+I used K-fold (K=5) and LOOCV cross validation to compare each classification method on each dataset. 100 trees are used for the random forest. The random forest has the strongest test accuracy on dataset 1, however took the longest time to train. This was especially long when LOOCV cross-validation is used, as the training time is quadratic in the number of samples. All classifiers performed significantly worse on dataset2 compared to dataset 1, suggesting dataset 2 contains more mixed features. The random forest exhibited the strongest performance across each dataset. The LOOCV cross-validation produced generally similar results to K-fold while taking much longer to compute.
 
-I used K-fold (K=5) and LOOCV cross validation to compare each classification method on each dataset. 100 trees are used for the random forest. The random forest has the strongest test accuracy on dataset 1, however took the longest time to train. This was especially long when LOOCV cross-validation is used, as the training time is quadratic in the number of samples. All classifiers performed significantly worse than dataset 1, suggesting dataset 2 contains more evenly distributed/mixed features. The random forest exhibited the strongest performance across each dataset.
+\newpage
 
 The results are formatted by the following variables:
 \begin{center}
@@ -76,7 +76,7 @@ The results are formatted by the following variables:
 
 For simplification, the Precision, Recall, and F1 data are omitted from the remainder of the experiments, as they are not significantly related to the analysis of overfitting and underfitting.
 
-\subsubsection{SVM Regularization}
+\subsection{SVM Regularization}
 
 For regularization experiments I manipulated the parameter $C$ used by the scikit-learn SVC. I tested the values $C=0.1, 1, 10, 50, 100, 1000$. I found that as the regularization constant increased, the SVC had better training and testing accuracy, however the model took slightly longer to train.
 
@@ -184,8 +184,8 @@ For this experiment I evaluated the performance of random forests with 10, 100, 
 \subsection{Summary}
 
 By the experiments performed above, the strongest classifier for dataset 1 is a random forest training on entropy loss (test acc $0.963$), with 10000 trees (test acc $0.965$).
-
 The strongest classifier for dataset 2 is an SVM with regularization constant $C=100$ with a test accuracy of $0.719$.
+As expected, plain decision trees exhibited strong overfitting (100\% train accuracy and $\approx$0.6 test accuracy), and are likely not a good choice for either dataset.
 
 \section{Experiments (Part 2)}
 
@@ -231,8 +231,19 @@ For this experiment I evaluated the performance of the model with different acti
 
 \subsection{Summary}
 
-By the experiments performed above, the final best model is one with 12 hidden units by 2 layers, tanh activation function, with learning rate 0.005 and no regularization.
+By the experiments performed above, the final best model is one with 12 hidden units by 2 layers, tanh activation function, with learning rate 0.005 and no regularization. The training accuracy generally closely followed the training accuracy, exhibiting minimal overfitting with a maximum difference of about 2\%.
 
-\section{Supplementary materials}
+The model did exhibit underfitting with a small learning rate as shown above with $\gamma=0.001$.
+
+Experimental data for part 2 is available in the directory \texttt{part2/experiments/}.
+
+\section{Source code}
+
+The code for parts 1 and 2 of project are provided in the \texttt{/part1} and \texttt{/part2} directories respectively.
+The usage information for each program can be displayed with the following commands:
+\begin{verbatim}
+$ python part1.py --help
+$ python part2.py --help
+\end{verbatim}
 
 \end{document}
